<resources>
    <string name="app_name">NoteApp</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">pick_color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add Url</string>
    <string name="my_notes">My Notes</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">ADD</string>
    <string name="cancel_dialog">CANCEL</string>
</resources>