<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAddUrlContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10sp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/imageAddURL"
        android:layout_width="25sp"
        android:layout_height="25sp"
        android:layout_marginStart="8sp"
        android:layout_marginTop="8sp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_web_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="8sp"
        android:includeFontPadding="false"
        android:text="@string/add_url"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/imageAddURL"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toEndOf = "@id/imageAddURL"
        app:layout_constraintTop_toTopOf = "@id/imageAddURL" />

    <TextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:includeFontPadding="false"
        android:padding="8sp"
        android:text="@string/add"
        android:textColor="@color/yellow"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputURL" />

    <EditText
        android:id="@+id/inputURL"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8sp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/enter_url"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingStart="8sp"
        android:paddingEnd="8sp"
        android:textColor="@color/white"
        android:textColorHint="#9E9E9E"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/imageAddURL"
        tools:layout_editor_absoluteX="71dp" />

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8sp"
        android:layout_marginBottom="8sp"
        android:includeFontPadding="false"
        android:padding="8sp"
        android:text="@string/cancel_dialog"
        android:textColor="@color/yellow"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textAdd"
        app:layout_constraintTop_toBottomOf = "@id/inputURL" />



</androidx.constraintlayout.widget.ConstraintLayout>