<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMiscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    android:orientation="vertical"
    app:behavior_peekHeight="40sp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/textMiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="40sp"

        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/miscellaneous"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor1"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:background="@drawable/background_note_color_1" />

            <ImageView
                android:id="@+id/imageColor1"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:contentDescription="@string/app_name"
                android:padding="10sp"
                android:src="@drawable/icon_done"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor2"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:background="@drawable/background_note_color_2" />

            <ImageView
                android:id="@+id/imageColor2"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:contentDescription="@string/app_name"
                android:padding="10sp"

                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor3"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:background="@drawable/background_note_color_3" />

            <ImageView
                android:id="@+id/imageColor3"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:contentDescription="@string/app_name"
                android:padding="10sp"

                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor4"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:background="@drawable/background_note_color_4" />

            <ImageView
                android:id="@+id/imageColor4"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:contentDescription="@string/app_name"
                android:padding="10sp"

                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor5"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:background="@drawable/background_note_color_5" />

            <ImageView
                android:id="@+id/imageColor5"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:contentDescription="@string/app_name"
                android:padding="10sp"
                app:tint="@color/white" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="Pick Color"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:layout_margin="10sp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="35sp"
            android:layout_height="30sp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/purple_200"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:includeFontPadding="false"
            android:text="@string/add_image"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddUrl"
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="35sp"
            android:layout_height="30sp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web_link"
            app:tint="@color/purple_200"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:includeFontPadding="false"
            android:text="@string/add_url"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="35sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="22sp"
            android:layout_height="22sp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            app:tint="@color/colorDelete" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:includeFontPadding="false"
            android:text="Delete Note"
            android:textColor="@color/colorDelete"
            android:textSize="20sp" />


    </LinearLayout>
</LinearLayout>